# adsform

./: .gcloudignore  .gitignore  Dockerfile.ci  README.md  app.yaml  countries_cities.json  deploy.sh  pyproject.toml  requirements.txt  wsgi.py
flask_wtforms/: __init__.py  countries.py  forms.py  googleint.py  routes.py
flask_wtforms/static/css/: forms.css  style.css
flask_wtforms/templates/: adcreation.jinja2  comingsoon.jinja2  layout.jinja2
flask_wtforms_tutorial/: data_fetcher.py  forms.py  googleint.py  quickstart.py  routes.py
flask_wtforms_tutorial/static/css/: home.css
flask_wtforms_tutorial/templates/: adcreation.jinja2  contact.jinja2  index.jinja2  layout.jinja2  success.jinja2
