[tool.poetry]
name = "flask_wtforms_tutorial"
version = "0.1.0"
description = "POC Flask app to create ad rows into google sheet."
authors = ["Ceren Tuker <ceren.tuker@smartly.io>"]
license = "MIT"
readme = "README.md"
keywords = [
    "Flask",
    "Forms",
    "Flask-WTF",
    "MVC"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask-wtf = "*"
python-dotenv = "*"
email_validator = "*"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
lesscpy = "*"
cssmin = "*"
jsmin = "*"
pytest = "*"
black = "^21.5b1"
isort = "^5.8.0"

[tool.poetry.scripts]
run = "wsgi:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

